--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -9,39 +9,47 @@
     <div class="col-12 sm:col-6">
         <mat-card>
             <mat-card-content>
-                <div class="grid">
+                <!--Enlazo el formulario-->
+                <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
                     <mat-form-field class="col-12 sm:col-6">
                         <mat-label>Super héroe</mat-label>
-                        <input matInput type="text" required />
+                        <input matInput type="text" required formControlName="superhero" />
                     </mat-form-field>
 
                     <mat-form-field class="col-12 sm:col-6">
                         <mat-label>Alter ego</mat-label>
-                        <input matInput type="text" required />
+                        <input matInput type="text" required formControlName="alter_ego" />
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>Primera aparición</mat-label>
-                        <input matInput type="text" required />
+                        <input matInput type="text" required formControlName="first_appearance" />
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>Personajes</mat-label>
-                        <input matInput type="text" required />
+                        <input matInput type="text" required formControlName="characters" />
                     </mat-form-field>
 
                     <mat-form-field class="col-12">
                         <mat-label>Creador</mat-label>
-                        <mat-select required="">
+                        <mat-select formControlName="publisher" required>
                             <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
                                 {{publisher.desc}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
+
+                    <mat-form-field class="col-12">
+                        <mat-label>Alternative Image</mat-label>
+                        <input matInput type="text" formControlName="alt_img" />
+                    </mat-form-field>
+
+                </form>
                 <div class="flex justify-content-between">
                     <button mat-flat-button color="warn">Borrar</button>
-                    <button mat-flat-button color="primary"><mat-icon>save</mat-icon>Guardar</button>
+                    <button mat-flat-button color="primary"
+                        (click)="onSubmit()"><mat-icon>save</mat-icon>Guardar</button>
                 </div>
 
             </mat-card-content>
@@ -49,7 +57,11 @@
     </div>
     <div class="col-12 sm:col-6">
         <mat-card>
-            <img src="" alt="imagen del héroe" mat-card-image />
+            <img [src]="currentHero | heroImage" alt="imagen del héroe" mat-card-image />
         </mat-card>
     </div>
 </div>
+
+<pre>
+    {{currentHero | json}}   
+</pre>
