--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,6 +1,6 @@
 <h1>
-    Editar / Agregar Héroe
-    <small>Superman</small>
+    {{currentHero.id ? 'Editar' : 'Agregar'}} héroe
+    <small *ngIf="currentHero.id">{{currentHero.superhero}}</small>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -47,7 +47,8 @@
 
                 </form>
                 <div class="flex justify-content-between">
-                    <button mat-flat-button color="warn">Borrar</button>
+                    <button *ngIf="currentHero.id" (click)="onDeleteHero()" mat-flat-button color="warn">Borrar</button>
+                    <span></span>
                     <button mat-flat-button color="primary"
                         (click)="onSubmit()"><mat-icon>save</mat-icon>Guardar</button>
                 </div>
