tarea guard and end proyect

--- a/src/app/heroes/components/card/card.component.html
+++ b/src/app/heroes/components/card/card.component.html
@@ -7,10 +7,10 @@
     <!-- imagen -->
     <img mat-card-image [src]="hero | heroImage" [alt]="hero.superhero">
 
-    <mat-card-content class="mt-2">
+    <mat-card-content class="mt-2" >
         <h4>{{ hero.publisher }}</h4>
         <p>
-            <strong>Primera aparición</strong> {{ hero.first_appearance }}
+            <strong>Primera aparición:</strong> {{ hero.first_appearance }}
             <br>
             <mat-chip-listbox>
                 <mat-chip *ngFor="let name of hero.characters.split(',') | slice:0:3">
